--- a/styles/style.css
+++ b/styles/style.css
@@ -123,6 +123,12 @@ footer a {
 }
 
 @media (max-width: 500px) {
+  body {
+    margin: 15px 25px;
+  }
+  header h1 {
+    font-size: 2rem;
+  }
   .wrapper {
     display: grid;
     grid-template-areas:
